syntax = "proto3";

package performanceCommand;


service Sender {
  rpc PerformanceCentral (stream CommandRequest) returns (stream CommandResult);
}

message CommandRequest {
	int32 command = 1;
	bool state = 2;
}

message CommandResult {
  string reason = 1;
}
